force-app/main/default/objects/SVMXA360__SM_TA_ActivityLog__c/SVMXA360__SM_TA_ActivityLog__c.object-meta.xml
<CustomObject>
    <description>This object logs the status and details of operations performed on Technical Attributes</description>
    <label>Technical Attribute Activity Log</label>
    <nameField>
        <displayFormat>L-{00000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Attribute Activity Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>