force-app/main/default/objects/SVMXA360__SM_TA_ActivityLog__c/fields/SVMXA360__AssetId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset Id of the record on which technical attributes are being captured.</description>
    <inlineHelpText>Asset Id of the record on which technical attributes are being captured.</inlineHelpText>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Technical Attribute Activity Logs</relationshipLabel>
    <relationshipName>TechnicalAttributeActivityLogs</relationshipName>
    <type>Lookup</type>
</CustomField>