force-app/main/default/objects/SVMXA360__SM_TA_ActivityLog__c/fields/SVMXA360__Message__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Message__c</fullName>
    <description>Reason for Success/Failure.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Reason for Success/Failure.</inlineHelpText>
    <label>Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>