force-app/main/default/objects/SVMXA360__SM_TA_ActivityLog__c/fields/SVMXA360__OperationStatus__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OperationStatus__c</fullName>
    <description>Status of the operation.</description>
    <inlineHelpText>Status of the operation.</inlineHelpText>
    <label>Operation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>