force-app/main/default/objects/SVMXA360__SM_TA_ActivityLog__c/fields/SVMXA360__OperationType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OperationType__c</fullName>
    <description>Type of operation performed. For example: invoking an API.</description>
    <inlineHelpText>Type of operation performed. For example: invoking an API.</inlineHelpText>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>ApexAction</fullName>
                <label>Apex Action</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>