force-app/main/default/objects/SVMXA360__SM_TA_ActivityLog__c/fields/SVMXA360__UserId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who performed the operation</description>
    <inlineHelpText>User who performed the operation</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TechnicalAttributeActivityLogs</relationshipName>
    <type>Lookup</type>
</CustomField>